hyrax_tests/errors/NoSuchVariable.ascii
url = http://localhost:8080/opendap/NWAtlanticDec_1km.nc.ascii?k
-s 
